--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,5 +16,5 @@
 
 
 <% if @enable_news %>
-  <%= render "pages/user_news", { :user_news => @user_achievements } %>
+  <%= render "pages/user_news", { :user_events => @user_events } %>
 <% end %>
