--- a/app/views/user_rolls/form.html.erb
+++ b/app/views/user_rolls/form.html.erb
@@ -13,103 +13,109 @@
 			<%= f.text_field :name, :class => "xlarge" %>
 		</div>
 	</div>
-		<div class="field clearfix">
-			<label>Settings</label>
-			<div class="input">
-				<ul class="inputs-list">
-					<li>
-						<label>
-							<%= f.check_box :enable_administration %>
-							<span>Enable Administration</span>
-						</label>
-					</li>
-					<li>
-						<label>
-							<%= f.check_box :enable_company_store %>
-							<span>Enable Rewards</span>
-						</label>
-					</li>
-					<li>
-						<label>
-							<%= f.check_box :enable_leaderboard %>
-							<span>Enable Leaderboard</span>
-						</label>
-					</li>
-					<li>
-						<label>
-							<%= f.check_box :enable_dashboard %>
-							<span>Enable Dashboard</span>
-						</label>
-					</li>
-					<li>
-						<label>
-							<%= f.check_box :enable_tour %>
-							<span>Enable Tour</span>
-						</label>
-					</li>            
-					<li>
-						<label>
-							<%= f.check_box :enable_browsing %>
-							<span>Enable challenge browsing</span>
-						</label>
-					</li>            
-					<li>
-						<label>
-							<%= f.check_box :enable_comments %>
-							<span>Enable comments on challenges</span>
-						</label>
-					</li>            
-					<li>
-						<label>
-							<%= f.check_box :enable_news %>
-							<span>Enable news feed</span>
-						</label>
-					</li>					
-					<li>
-						<label>
-							<%= f.check_box :enable_feedback %>
-							<span>Enable feedback on questions</span>
-						</label>
-					</li>            
-					<li>
-						<label>
-							<%= f.check_box :enable_achievements %>
-							<span>Enable achievements</span>
-						</label>
-					</li>						
-					<li>
-						<label>
-							<%= f.check_box :enable_recommendations %>
-							<span>Enable challenge recommendations</span>
-						</label>
-					</li>
-					<li>
-						<label>
-							<%= f.check_box :enable_user_creation %>
-							<span>Enable non-admin user content creation</span>
-						</label>
-					</li>
-					<li>
-						<label>
-							<%= f.check_box :enable_collaboration %>
-							<span>Enable all company admins to view and edit company challenges</span>
-						</label>
-					</li>
-					<li>
-						<label>
-							<%= f.check_box :enable_auto_enroll %>
-							<span>Enable auto-enrollment of new users in any published challenge</span>
-						</label>
-					</li>
-					<li>
-						<label>
-							<%= f.check_box :enable_auto_generate %>
-							<span>Enable automatic question generator</span>
-						</label>
-					</li>
-				</ul>
-			</div>
+	<div class="field clearfix">
+		<label>Settings</label>
+		<div class="input">
+			<ul class="inputs-list">
+				<li>
+					<label>
+						<%= f.check_box :enable_administration %>
+						<span>Enable Administration</span>
+					</label>
+				</li>
+				<li>
+					<label>
+						<%= f.check_box :enable_company_store %>
+						<span>Enable Rewards</span>
+					</label>
+				</li>
+				<li>
+					<label>
+						<%= f.check_box :enable_leaderboard %>
+						<span>Enable Leaderboard</span>
+					</label>
+				</li>
+				<li>
+					<label>
+						<%= f.check_box :enable_dashboard %>
+						<span>Enable Dashboard</span>
+					</label>
+				</li>
+				<li>
+					<label>
+						<%= f.check_box :enable_tour %>
+						<span>Enable Tour</span>
+					</label>
+				</li>            
+				<li>
+					<label>
+						<%= f.check_box :enable_browsing %>
+						<span>Enable challenge browsing</span>
+					</label>
+				</li>            
+				<li>
+					<label>
+						<%= f.check_box :enable_comments %>
+						<span>Enable comments on challenges</span>
+					</label>
+				</li>            
+				<li>
+					<label>
+						<%= f.check_box :enable_news %>
+						<span>Enable news feed</span>
+					</label>
+				</li>					
+				<li>
+					<label>
+						<%= f.check_box :enable_feedback %>
+						<span>Enable feedback on questions</span>
+					</label>
+				</li>            
+				<li>
+					<label>
+						<%= f.check_box :enable_achievements %>
+						<span>Enable achievements</span>
+					</label>
+				</li>						
+				<li>
+					<label>
+						<%= f.check_box :enable_recommendations %>
+						<span>Enable challenge recommendations</span>
+					</label>
+				</li>
+				<li>
+					<label>
+						<%= f.check_box :enable_user_creation %>
+						<span>Enable non-admin user content creation</span>
+					</label>
+				</li>
+				<li>
+					<label>
+						<%= f.check_box :enable_collaboration %>
+						<span>Enable all company admins to view and edit company challenges</span>
+					</label>
+				</li>
+				<li>
+					<label>
+						<%= f.check_box :enable_auto_enroll %>
+						<span>Enable auto-enrollment of new users in any published challenge</span>
+					</label>
+				</li>
+				<li>
+					<label>
+						<%= f.check_box :enable_auto_generate %>
+						<span>Enable automatic question generator</span>
+					</label>
+				</li>
+			</ul>
 		</div>
+	</div>
+	<% if @form_mode == "edit" %>
+	<div>
+		<h3>Adding Users</h3>
+		<p style="padding:10px 10px 0px 10px;">Send the following link to invite new users. These new users will automatically belong to the <% @user_roll.name %> user roll type.</p>
+		<p style="padding:10px; font-weight:bold;"><%= @user_roll.signup_link %></p>
+	<% end %>
 	<div class="actions">
 		<%= f.submit "Save", :class => "btn primary" %>
 		<%= link_to "Delete", @user_roll, :method => :delete, :confirm => "Are you sure you want to delete this user roll?", :class => "btn danger" %>
