--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,8 +5,8 @@
 				<h3><a style="font-size: 26px;" href="/"><%= company_logo.html_safe %></a></h3>
 				<% if signed_in? %>
 				<ul class="top_nav_bar">
-					<% if (@enable_browsing || current_user.company_admin?) %><li><%= link_to "Explore", explore_path %></li><% end %>
-					<% if (@enable_user_creation || current_user.company_admin?) %><li><%= link_to "Create", create_path %></li><% end %>
+					<% if @enable_browsing %><li><%= link_to "Explore", explore_path %></li><% end %>
+					<% if @enable_user_creation %><li><%= link_to "Create", create_path %></li><% end %>
 					<li>
             <a href="<%= user_url(current_user) %>">
               <%= image_tag current_user.profile_pic, :size => "18x18", :style => "display:inline; float:left; margin-right: 5px;" %>
@@ -25,7 +25,7 @@
 					<% if signed_in? %>
             <% if @enable_tour %>
             <li>
-              <% if current_user.company_admin? %>
+              <% if @enable_administation %>
               <%= link_to "Take the tour", tours_path %>
               <% else %>
               <%= link_to "Take the tour", user_tour_tour_path(1) %>
