--- a/app/views/leaderboards/index.html.erb
+++ b/app/views/leaderboards/index.html.erb
@@ -19,7 +19,7 @@ function change_leaderboard(new_board_id){
 	<% end %>
 </ul>
 <% @leaderboards.each do |l| %>
-	<%= render "leaderboards/leaderboard", {:leaderboard_id => l[0], :leaderboard_entries => l[1]} %>
+	<%= render "leaderboards/leaderboard", { :leaderboard_id => l[0], :leaderboard_entries => l[1], :display => false, :disable_filler => false, :limit => 10 } %>
 <% end %>
 <p>Last leaderboard update: <%= time_ago_in_words(@last_update) %> ago</p>
 <br />
