--- a/app/views/paths/completion.html.erb
+++ b/app/views/paths/completion.html.erb
@@ -1,3 +1,6 @@
+<% if @must_register %>
+	<%= render "paths/popups/jumpstart_registration", { :user => current_user, :path => @path } %>
+<% end %>
 <section class="completion row">
   <div class="span4">
     <%= image_tag @path.path_pic, :size => "200x200" %>
@@ -5,17 +8,32 @@
   <div class="span12" style="margin-top: 15px;">
     <h1>Congratulations!</h1>
 		<div>
-      <h4>You have successfully completed this challenge. You earned <%= @total_points_earned %> points.</h4>
-      <br>
-      <% if @enable_comments %>
-				<a href="http://www.linkedin.com/shareArticle?mini=true&url=<%= hero_path_path(@path.id, :hero => current_user.id) %>&title=Moonlite Achievement Unlocked!&summary=<%= current_user.name %> is now a certified expert in <%= @path.name %>. Can you beat their score?&source=<%= hero_path_path(@path.id, :hero => current_user.id)%>"><img src="/images/linkedin-connect.gif" width="150" height="45"></a>
-				<a href="http://www.facebook.com/sharer.php?u=<%= hero_path_path(@path.id, :hero => current_user.id) %>"><img src="/images/facebook-connect.gif" width="150" height="55"></a>
-				<a href="http://www.twitter.com"><img src="/images/twitter-connect.png" width="150" height="45"></a>
+      <p style="font-size:16px; font-weight: bold; margin-bottom: 25px;">You have successfully completed this challenge. You're now ranked <%= @user_rank %> with <%= @total_points_earned %> points. <% if @next_rank_points > 0 %>You only need <%= @next_rank_points %> points to move up to the next rank!<% end %></p>
+			<% if @must_register %>
+				<%= link_to "Save Score", "#", :id => "save_score", :class => "btn primary large" %>
+			<% else %>
+				<% if @enable_comments %>
+					<a href="http://www.linkedin.com/shareArticle?mini=true&url=<%= hero_path_url(@path.id, :hero => current_user.id) %>&title=Moonlite Achievement Unlocked!&summary=<%= current_user.name %> is now a certified expert in <%= @path.name %>. Can you beat their score?&source=<%= hero_path_path(@path.id, :hero => current_user.id)%>"><img src="/images/linkedin-connect.gif" width="150" height="45"></a>
+					<a href="http://www.facebook.com/sharer.php?u=<%= hero_path_url(@path.id, :hero => current_user.id) %>"><img src="/images/facebook-connect.gif" width="150" height="55"></a>
+					<a href="http://www.twitter.com"><img src="/images/twitter-connect.png" width="150" height="45"></a>
+				<% end %>
 			<% end %>
-    </div>
+		</div>
   </div>
 </section>
+<section style="padding: 30px 20px 0px 20px;">
+	<%= render "leaderboards/leaderboard", 
+		{ :leaderboard_entries => @leaderboards[1], 
+			:leaderboard_id => "Overall", 
+			:display => true, 
+			:disable_filler => true, 
+			:highlight => current_user.id,
+			:limit => 5
+	} %>
+</section>
 <% if @enable_recommendations %>
+	<hr/>
 	<%= render "pages/suggested_paths", {:paths_title => "Similar paths", :paths_list => @similar_paths} %>
+	<hr/>
 	<%= render "pages/suggested_paths", {:paths_title => "Recommended for you", :paths_list => @suggested_paths} %>
 <% end %>
