--- a/app/views/companies/edit.html.erb
+++ b/app/views/companies/edit.html.erb
@@ -33,10 +33,13 @@
 			</div>
 			<hr/>
 			<div class="field clearfix">
-				<%= f.label "One-step signup" %>
+				<%= f.label "Default User Roll" %>
 				<div class="input">
-					<%= f.check_box :enable_one_signup %>
-					<span><%= @signup_url %></span>
+					<select id="company_user_roll_id" name="company[user_roll_id]">
+						<% @user_rolls.each do |u| %>
+							<option value="<%= u.id %>"><%= u.name %></option>
+						<% end %>
+					</select>
 				</div>
 			</div>
 			<div class="field clearfix">
