--- a/app/views/sections/_info_resource.html.erb
+++ b/app/views/sections/_info_resource.html.erb
@@ -1,4 +1,4 @@
-<% if info_resource %>
+<% if info_resource && info_resource.obj %>
 	<% if info_resource.obj.content_type.include?("image") %>
 		<img src="<%= info_resource.obj.url %>" height="250" style="margin-left: 150px; margin-bottom: 30px;">
 	<% end %>
