--- a/app/views/paths/completion.html.erb
+++ b/app/views/paths/completion.html.erb
@@ -8,14 +8,14 @@
   <div class="span12" style="margin-top: 15px;">
     <h1>Congratulations!</h1>
 		<div>
-      <p style="font-size:16px; font-weight: bold; margin-bottom: 25px;">You have successfully completed this challenge. You're now ranked <%= @user_rank %> with <%= @total_points_earned %> points. <% if @next_rank_points > 0 %>You only need <%= @next_rank_points %> points to move up to the next rank!<% end %></p>
+      <p style="font-size:16px; font-weight: bold; margin-bottom: 25px; line-height:25px;">You have successfully completed this challenge. You're now ranked <%= @user_rank %> with <%= @total_points_earned %> points. <% if @next_rank_points > 0 %>You only need <%= @next_rank_points %> points to move up to the next rank!<% end %></p>
 			<% if @must_register %>
 				<%= link_to "Save Score", "#", :id => "save_score", :class => "btn primary large" %>
 			<% else %>
 				<% if @enable_comments %>
-					<a href="http://www.linkedin.com/shareArticle?mini=true&url=<%= hero_path_url(@path.id, :hero => current_user.id) %>&title=Moonlite Achievement Unlocked!&summary=<%= current_user.name %> is now a certified expert in <%= @path.name %>. Can you beat their score?&source=<%= hero_path_path(@path.id, :hero => current_user.id)%>"><img src="/images/linkedin-connect.gif" width="150" height="45"></a>
-					<a href="http://www.facebook.com/sharer.php?u=<%= hero_path_url(@path.id, :hero => current_user.id) %>"><img src="/images/facebook-connect.gif" width="150" height="55"></a>
-					<a href="http://www.twitter.com"><img src="/images/twitter-connect.png" width="150" height="45"></a>
+					<a href="http://www.linkedin.com/shareArticle?mini=true&url=<%=u hero_path_url(@path.id, :hero => current_user.id) %>&title=Moonlite Achievement Unlocked!&summary=<%= current_user.name %> is now a certified expert in <%= @path.name %>. Can you beat their score?&source=<%= hero_path_path(@path.id, :hero => current_user.id)%>" target="_blank"><img src="/images/linkedin-connect.gif" width="150" height="45"></a>
+					<a href="http://www.facebook.com/sharer.php?u=<%=u hero_path_url(@path.id, :hero => current_user.id) %>" target="_blank"><img src="/images/facebook-connect.gif" width="150" height="55"></a>
+					<a href="https://twitter.com/intent/tweet?url=<%=u hero_path_url(@path.id, :hero => current_user.id) %>&text=I just rocked this challenge on MetaBright!" target="_blank"><img src="/images/twitter-connect.png" width="150" height="45"></a>
 				<% end %>
 			<% end %>
 		</div>
@@ -34,6 +34,4 @@
 <% if @enable_recommendations %>
 	<hr/>
 	<%= render "pages/suggested_paths", {:paths_title => "Similar paths", :paths_list => @similar_paths} %>
-	<hr/>
-	<%= render "pages/suggested_paths", {:paths_title => "Recommended for you", :paths_list => @suggested_paths} %>
 <% end %>
