--- a/public/stylesheets/core.css
+++ b/public/stylesheets/core.css
@@ -79,6 +79,10 @@ section.wiki { margin-bottom: 50px; }
 #path_explore h2 { float: left; text-transform: uppercase; font-size: 19px; font-weight: bold; color: slategray; }
 .caption-title { font-size: 12px; font-weight: bold; line-height: 13px; }
 
+/* Leaderboard */
+.jumpstart_leaderboard td {padding:3px;}
+.jumpstart_leaderboard th {padding:3px;}
+
 .error,.alert,.notice,.success,.info { padding: 0.8em; margin-bottom: 1em; border: 2px solid #ddd; }
 .error, .alert { background: #fbe3e4; color: #8a1f11; border-color: #fbc2c4; }
 .notice        { background: #fff6bf; color: #514721; border-color: #ffd324; }
