--- a/app/views/pages/_path_grid.html.erb
+++ b/app/views/pages/_path_grid.html.erb
@@ -5,9 +5,7 @@
 	<li>
 		<a href="<%= path_path(path) %>" id="<%= path.name.gsub(" ", "_") %>">
 			<div class="path-caption">
-				<span class="caption-title"><%= truncate(path.name, :length => 35) %></span><br>
-				<span style="font-size: 10px; float: left;"><%= path.enrolled_user_count %> users enrolled.</span>
-				<span style="font-size: 10px; float: right;"><%= path.difficulty_rating %></span>
+				<span class="caption-title" style="font-size:22px;line-height:30px;"><%= truncate(path.name, :length => 15) %></span><br>
 			</div>
 			<img class="thumbnail" src="<%= paths[pp].path_pic %>" height="200" width="210">
 		</a>
