--- a/app/views/sections/_jumpstart.html.erb
+++ b/app/views/sections/_jumpstart.html.erb
@@ -10,6 +10,9 @@
 			if ($("#user_name").val() == ""){
 				$(".form_errors").text("Username must be at least 3 letters.");
 				return false;
+			} else if ($("#user_catch_phrase").val() == ""){
+				$(".form_errors").text("Motto must be at least 3 letters.");
+				return false;
 			} else {
 				$("#user_name_in_header").text($("#user_name").val());
 				$('#username_modal').modal('hide');
@@ -18,7 +21,7 @@
 					backdrop: 'static',
 					show: true
 				});
-				var count = 5;
+				var count = 10;
 				countdown = setInterval(function(){
 					$("#starting_timer").html("<strong>00:0"+count+"</strong>");
 					
@@ -32,8 +35,11 @@
 		});
   });
 </script>
+
+
+
 <div id="username_modal" class="modal hide fade">
-  <%= form_for(current_user, :remote => true, :html => {:id => "change_name_form"}) do |f| %>
+  <%= form_for(current_user, :remote => true, :html => {:id => "change_name_form", :style=>"margin-bottom:0px;"}) do |f| %>
 	<%= f.hidden_field :path_id, :value => path.id %>
 	<div class="modal-header">
     <a href="#" class="close"></a>
@@ -42,28 +48,48 @@
   <div class="modal-body">
     <p style="font-size: 16px; padding:0 7px 5px 10px;"><strong style="color:green"><%= company_logo %></strong> lets you prove your knowledge for the stuff you like. Show off your smarts and connect with other fans.</p>
 		<div style="margin-top:20px; margin-bottom:20px;">
-			<p style="font-size: 16px; padding:0 7px 5px 10px;">Top 3 high scores for <strong><%= path.name %></strong>:</p>
-			<%= render "leaderboards/leaderboard", { :leaderboard_entries => leaderboards, :leaderboard_id => "Overall", :display => true, :disable_filler => true, :limit => 3 } %>
-		</div>
-		<p style="font-size: 16px; padding:0 7px 5px 10px;">Are you up to the Challenge? Make a name for yourself and see where you rank.</p>
-		<p class="form_errors" style="color:red; margin-bottom: 15px;"></p>
-		<div class="clearfix">
-			<label style="font-size: 16px;">Enter username:</label>
-			<div class="input">
-				<%= f.text_field :name, :value => "", :style => "width:175px; margin-right: 15px;" %>
-				<%= f.submit "Start Challenge!", :class => "btn primary" %>
+			<p style="font-size: 16px; padding:0 7px 5px 10px;">Top 3 high scores for <strong><%= path.name %>:</strong></p>
+			<div style="padding:0 7px 5px 10px;">
+				<%= render "leaderboards/leaderboard", { :leaderboard_entries => leaderboards, :leaderboard_id => "Overall", :display => true, :disable_filler => true, :limit => 3, :table_class => "jumpstart_leaderboard"} %>
 			</div>
 		</div>
-  </div>
+		<p style="font-size: 16px; padding:0 7px 5px 10px;">Are you up to the Challenge? Make a name for yourself and see where you rank.</p>
+		<p class="form_errors" style="color:red; padding:0 7px 0px 10px;"></p>
+		<div style="padding:10px;">
+			<div class="clearfix">
+				<label style="font-size: 16px;">Enter a username:</label>
+				<div class="input">
+					<%= f.text_field :name, :value => "", :style => "width:235px;" %>
+				</div>
+			</div>
+			<div class="clearfix">
+				<label style="font-size: 16px;">Enter a motto:</label>
+				<div class="input">
+					<%= f.text_field :catch_phrase, :value => "", :style => "width:235px;" %>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="modal-footer">
+		<%= f.submit "Start Challenge!", :class => "btn primary" %>
+	</div>
 	<% end %>
 </div>
+
+
 <div id="start_modal" class="modal hide fade">
 	<div class="modal-header">
     <a href="#" class="close"></a>
-    <h3>Good Luck!</h3>
+    <h3>You're about to start...</h3>
   </div>
 	<div class="modal-body">
-    <p style="font-size: 16px; padding:0 7px 5px 10px;">Challenge starts in...</p>
-		<p style="font-size: 22px; padding:0 7px 5px 30px;" id="starting_timer"></p>
+    <p style="font-size: 16px; padding:0 7px 5px 10px;">Quick tips:</p>
+		<ol style="font-size: 16px; padding:0 7px 5px 10px;">
+			<li style="padding:5px;"><strong>Earn points</strong> by answering questions correctly. </li>
+			<li style="padding:5px;">Earn a <strong>streak bonus</strong> by correctly answer multiple questions in a row.</li>
+			<li style="padding:5px;">You only have <strong>30 seconds</strong> to answer each question before your streak bonus ends  expires.</li>
+		</ol>
+		<p style="font-size: 16px; padding:0 7px 5px 10px; font-weight: bold;">Good luck!</p>
+		<p style="font-size: 22px; padding:5px 7px 5px 30px;" id="starting_timer">00:10</p>
 	</div>
 </div>
