--- a/app/views/sections/_jumpstart.html.erb
+++ b/app/views/sections/_jumpstart.html.erb
@@ -87,7 +87,7 @@
 		<ol style="font-size: 16px; padding:0 7px 5px 10px;">
 			<li style="padding:5px;"><strong>Earn points</strong> by answering questions correctly. </li>
 			<li style="padding:5px;">Earn a <strong>streak bonus</strong> by correctly answer multiple questions in a row.</li>
-			<li style="padding:5px;">You only have <strong>30 seconds</strong> to answer each question before your streak bonus ends  expires.</li>
+			<li style="padding:5px;">You only have <strong>30 seconds</strong> to answer each question before your streak bonus expires.</li>
 		</ol>
 		<p style="font-size: 16px; padding:0 7px 5px 10px; font-weight: bold;">Good luck!</p>
 		<p style="font-size: 22px; padding:5px 7px 5px 30px;" id="starting_timer">00:10</p>
