Added ability to retake questions (or not).

--- a/app/views/paths/edit_settings.html.erb
+++ b/app/views/paths/edit_settings.html.erb
@@ -54,6 +54,12 @@
 						<span>Allow users to do sections in any order</span>
 					</label>
 				</li>
+				<li>
+					<label>
+						<%= f.check_box :enable_retakes %>
+						<span>Allow users retake questions until they get them right</span>
+					</label>
+				</li>
 			</ul>
 		</div>
 		<br>
