--- a/app/views/paths/edit_settings.html.erb
+++ b/app/views/paths/edit_settings.html.erb
@@ -60,6 +60,12 @@
 						<span>Allow users retake questions until they get them right</span>
 					</label>
 				</li>
+				<li>
+					<label>
+						<%= f.text_field :game_type %>
+						<span>Which game type?</span>
+					</label>
+				</li>
 			</ul>
 		</div>
 		<br>
