--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -3,7 +3,7 @@
 	<ul class="tabs">
 		<li class="active"><a href="#">Users</a></li>
 		<li><%= link_to "Settings", edit_company_path(@company) %></li>
-		<li><%= link_to "User Rolls", user_rolls_path %></li>
+		<li><%= link_to "User Roles", user_roles_path %></li>
 	</ul>
 	<section id="users">
 		<h2 style="margin-bottom:15px;">Registered Users</h2>
@@ -15,7 +15,7 @@
 				<tr>
 					<th>#</th>
 					<th>Name</th>
-					<th>User Roll</th>
+					<th>User Role</th>
 					<th>Enrolled Challenges</th>
 					<th>Points Earned</th>
 					<th>Status</th>
@@ -27,7 +27,7 @@
 					<tr>
 						<td><%= user_counter.to_s %></td>
 						<td><%= link_to u.name, u %></td>
-						<td><%= link_to u.user_roll.name, edit_roll_user_path(u) unless u.user_roll.nil?%></td>
+						<td><%= link_to u.user_role.name, edit_role_user_path(u) unless u.user_role.nil?%></td>
 						<%
 							enrolled_paths = []
 							u.enrolled_paths.each do |p|
@@ -55,7 +55,7 @@
 		</table>
 		<% end %>
 		<h4>Note: Adding Users</h4>
-		<p>Users must be added to a specific user roll. To invite new users, click on the <strong>User Rolls</strong> tab above, then click on one of the user rolls in the table. From there, you'll find a link to use to invite new users to your organization.</p>
+		<p>Users must be added to a specific user role. To invite new users, click on the <strong>User Roles</strong> tab above, then click on one of the user roles in the table. From there, you'll find a link to use to invite new users to your organization.</p>
 		<hr/>
 	</section>
 </section>
