--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -32,7 +32,7 @@
               <% end %>
             </li>
             <% end %>
-					<li><%= link_to "Sign out", signout_path, :method => :delete %></li>
+					<li><%= link_to "Sign out", signout_path, :method => :delete, :id => "signout_link" %></li>
 					<% else %>
 					<li ><%= link_to "Sign in", signin_path %></li>
 					<% end %>
