--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
  <h1 style="margin-bottom: 15px;">My Challenges</h1>
 <% if @enrolled_paths.empty? && @completed_paths.empty? %>
 	<hr/>
-  <p>You are not currently enrolled in any paths.</p>
+  <p>You are not currently enrolled in any challenges.</p>
   <%= link_to "Get started!", explore_path, :class => "btn primary" %>
 <% elsif @enrolled_paths.empty? && !@completed_paths.empty? %>
 	<hr/>
