--- a/app/views/sections/_multiple_choice_answer.html.erb
+++ b/app/views/sections/_multiple_choice_answer.html.erb
@@ -1,37 +1,42 @@
 <style>
-.already_guessed { text-decoration: line-through; color:lightgray;}
+.already_guessed { color:red; opacity: .25;}
+label.possible_answer:hover { background: whitesmoke; border: 2px solid gray; border-radius: 2px; }
+label.possible_answer { padding: 5px 5px 5px 30px; width: 275px; }
+label.possible_answer:active { padding: 5px 5px 5px 30px; width: 275px; border: 2px solid black;}
+label.unselected_answer { border: 2px solid white; background: white;}
+.selected_answer { background: whitesmoke; border: 2px solid gray; border-radius: 2px; }
+#correct_modal { width: 350px; }
 </style>
 
 <div class="field clearfix">
-	<label>Answer:</label>
 	<div class="input">
 		<ul class="inputs-list">
 			<li>
 				<% unless task.answer1.blank? %>
-				<label>
+				<label class="possible_answer unselected_answer" onclick="$('.selected_answer').removeClass('selected_answer').addClass('unselected_answer');$(this).removeClass('unselected_answer').addClass('selected_answer');">
 					<input <%= @hints.include?(task.answer1) ? "disabled='disabled'" : "" %> id="completed_task_answer1" name="completed_task[answer]" type="radio" value="1">
 					<span class="<%= @hints.include?(task.answer1) ? "already_guessed" : "" %>"><%= task.answer1 %></span>
 				</label>
 				<% end %>
 				<% unless task.answer2.blank? %>
-				<label>
+				<label class="possible_answer unselected_answer" onclick="$('.selected_answer').removeClass('selected_answer').addClass('unselected_answer');$(this).removeClass('unselected_answer').addClass('selected_answer');">
 					<input <%= @hints.include?(task.answer2) ? "disabled='disabled'" : "" %> id="completed_task_answer2" name="completed_task[answer]" type="radio" value="2">
 					<span class="<%= @hints.include?(task.answer2) ? "already_guessed" : "" %>"><%= task.answer2 %></span>
 				</label>
 				<% end %>
 				<% unless task.answer3.blank? %>
-				<label>
+				<label class="possible_answer unselected_answer" onclick="$('.selected_answer').removeClass('selected_answer').addClass('unselected_answer');$(this).removeClass('unselected_answer').addClass('selected_answer');">
 					<input <%= @hints.include?(task.answer3) ? "disabled='disabled'" : "" %> id="completed_task_answer3" name="completed_task[answer]" type="radio" value="3">
 					<span class="<%= @hints.include?(task.answer3) ? "already_guessed" : "" %>"><%= task.answer3 %></span>
 				</label>
 				<% end %>
 				<% unless task.answer4.blank? %>
-				<label>
+				<label class="possible_answer unselected_answer" onclick="$('.selected_answer').removeClass('selected_answer').addClass('unselected_answer');$(this).removeClass('unselected_answer').addClass('selected_answer');">
 					<input <%= @hints.include?(task.answer4) ? "disabled='disabled'" : "" %> id="completed_task_answer4" name="completed_task[answer]" type="radio" value="4">
 					<span class="<%= @hints.include?(task.answer4) ? "already_guessed" : "" %>"><%= task.answer4 %></span>
 				</label>
 				<% end %>
 			</li>
-		</ul>
+	</ul>
 	</div>
 </div>
