--- a/app/views/sections/_progress_box.html.erb
+++ b/app/views/sections/_progress_box.html.erb
@@ -1,7 +1,12 @@
+<script>
+$(function(){
+	<% unless @correct.nil? %> set_answer_status(<%= @correct %>); <% end %>
+	<% unless @jumpstart %> start_question_timer(); <% end %>
+	$("#progressbar").progressbar({ value: <%= @progress %> });
+});
+</script>
 <section class="progress-box" style="margin-bottom: 50px;">
   <div style="float:right; margin-top: 10px;">
-    <span class="points total"><%= @earned_points %></span>
-    <span class="points current">+<%= @possible_points %></span>
     <span class="points streak">+<%= @streak_points %></span>
     <span class="timer">00:30</span>
   </div>
