--- a/app/views/user_roles/index.html.erb
+++ b/app/views/user_roles/index.html.erb
@@ -3,10 +3,10 @@
 	<ul class="tabs">
 		<li><%= link_to "Users", @company %></li>
 		<li><%= link_to "Settings", edit_company_path(@company) %></li>
-		<li class="active"><a href="#">User Rolls</a></li>
+		<li class="active"><a href="#">User roles</a></li>
 	</ul>
 	<section>
-		<h2 style="margin-bottom:15px;">User Rolls</h2>
+		<h2 style="margin-bottom:15px;">User roles</h2>
 		<table>
 			<thead>
 				<tr>
@@ -19,24 +19,24 @@
 			</thead>
 			<tbody>
 				<% counter = 0 %>
-				<% @user_rolls.each do |ur| %>
+				<% @user_roles.each do |ur| %>
 					<tr>
 						<td><%= counter.to_s %></td>
-						<td><%= link_to ur.name, edit_user_roll_path(ur) %></td>
+						<td><%= link_to ur.name, edit_user_role_path(ur) %></td>
 						<td><%= ur.enable_administration ? "Admin" : "User" %></td>
 						<td><%= ur.users.count %></td>
 						<td>
-						<%= link_to "Delete", ur, :method => "delete", :confirm => "Are you sure you want to delete this user roll?", :class => "btn secondary" %>
+						<%= link_to "Delete", ur, :method => "delete", :confirm => "Are you sure you want to delete this user role?", :class => "btn secondary" %>
 						</td>
 					</tr>
 					<% counter += 1 %>
 				<% end %>
 			</tbody>
 		</table>
-		<%= link_to "New Roll", new_user_roll_path, :class => "btn primary" %>
+		<%= link_to "New role", new_user_role_path, :class => "btn primary" %>
 	</section>
 	<div style="margin-top:30px;">
 		<h4>Note: Adding Users</h4>
-		<p>Users must be added to a specific user roll. To invite new users, click on one of the user rolls in the table above. From there, you'll find a link to use to invite new users to your organization.</p>
+		<p>Users must be added to a specific user role. To invite new users, click on one of the user roles in the table above. From there, you'll find a link to use to invite new users to your organization.</p>
 	</div>
 </section>
