--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -6,7 +6,7 @@
 	</style>
 	<h1>The cost of uncertainty...</h1>
 	<p>Companies of every size struggle with imperfect knowledge about what employees <strong>know</strong> and what they <strong>don't know</strong>. From new hires to seasoned veterans, its tough to keep everyone on the same page.</p>
-	<p>Moonlite gives you a crystal clear view of knowledge and skills across your company, while rewarding employees through a simple social game system for proving and growing their knowledge in the fields that are important to you.</p>
+	<p><%= company logo %> gives you a crystal clear view of knowledge and skills across your company, while rewarding employees through a simple social game system for proving and growing their knowledge in the fields that are important to you.</p>
 	<br>
 	<%= link_to "Request an invite", invitation_path, :class => "btn primary" %>
 </section>
