--- a/app/views/pages/invitation_sent.html.erb
+++ b/app/views/pages/invitation_sent.html.erb
@@ -1,2 +1,2 @@
 <h1>Request recieved!</h1>
-<p>Thank you for your interest in Project Moonlite! You should expect an email from us within 2-3 weeks.</p>
+<p>Thank you for your interest in <%= company logo %>! You should expect an email from us within 2-3 weeks.</p>
