--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -6,7 +6,7 @@
   <h3>What don't they know? What skills do they need?</h3>
   <h4>... Are you sure?</h4>
   <br>
-  <p style="font-size: 16px;">Find out how Moonlite can drive training and professional development within your company so everyone is on the same page.</p>
+  <p style="font-size: 16px;">Find out how <%= company_logo %> can drive training and professional development within your company so everyone is on the same page.</p>
   <br>
   <%= link_to "Learn more", about_path, :class => "btn primary" %>
 </section>
