--- a/app/views/paths/edit_settings.html.erb
+++ b/app/views/paths/edit_settings.html.erb
@@ -66,6 +66,12 @@
 						<span>Which game type?</span>
 					</label>
 				</li>
+				<li>
+					<label>
+						<%= f.check_box :is_locked %>
+						<span>Lock against access accept to creators and collaborators</span>
+					</label>
+				</li>
 			</ul>
 		</div>
 		<br>
