--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -2,11 +2,12 @@
 	<img src="https://s3-us-west-1.amazonaws.com/moonlite/static/logo.png" width="200" height="250"/>
 </section>
 <section>
-  <h2>What do your employees know? What skills do they have?</h2>
-  <h3>What don't they know? What skills do they need?</h3>
-  <h4>... Are you sure?</h4>
+  <h1 style="font-size: 100px; margin-top:50px;">Meta<span style="color:green">Bright</span></h1>
+	<h3>Knowledge is an asset. Track it.</h3>
   <br>
-  <p style="font-size: 16px;">Find out how <%= company_logo %> can drive training and professional development within your company so everyone is on the same page.</p>
+  <p style="font-size: 16px;"><strong>MetaBright</strong> helps companies ensure their employees have the knowledge they need to perform their best.</p>
   <br>
-  <%= link_to "Learn more", about_path, :class => "btn primary" %>
+	<%= form_for(:pages, :url => invitation_path, :method => "GET") do |f| %>
+	<%= f.text_field :email, :autofocus => true, :placeholder => "Enter your email address..." %> <%= f.submit "Request an Invite", :class => "btn primary",  %>
+	<% end %>
 </section>
