--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,7 @@
 	<nav class="topbar" data-scollspy="scrollspy" data-dropdown="dropdown">
 		<div class="fill">
 			<div class="container">
-				<h3><a style="font-size: 26px;" href="/"><%= company_logo.html_safe %></a></h3>
+				<h3><%= link_to company_logo.html_safe, current_user ? root_path : "#", :style => "font-size: 26px;" %></h3>
 				<% if signed_in? %>
 				<ul class="top_nav_bar">
 					<% if @enable_browsing %><li><%= link_to "Explore", explore_path %></li><% end %>
