--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -10,6 +10,7 @@
 		<% if @users.empty? %>
 			<p>You do not have any users for your organization yet.</p>
 		<% else %>
+		<span style="float:right;padding-bottom:10px; font-size: 16px; font-weight: bold;">Available seats: <%= @company.seat_limit - @company.users.size %></span>
 		<table>
 			<thead>
 				<tr>
