--- a/app/views/sections/_progress_box.html.erb
+++ b/app/views/sections/_progress_box.html.erb
@@ -10,6 +10,6 @@ $(function(){
     <span class="points streak">+<%= @streak_points %></span>
     <span class="timer">00:30</span>
   </div>
-  <div id="progressbar" style="float:right; margin-right: 10px;" alt="Progress Bar"></div>
+  <div id="progressbar" style="float:right; margin: 4px; width: 200px; height: 28px;" alt="Progress Bar"></div>
   <div id="correct_status" style="float:right; margin-top:10px; margin-right: 10px; font-weight: bold;"></div>
 </section>
